k8s/guardians/default/_namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    vault-injection: enabled
