k8s/guardians/default/cassandra.yml
---
apiVersion: v1
kind: Service
metadata:
  name: cassandra
  namespace: default
  labels: &labels
    app.kubernetes.io/name: cassandra
    app.kubernetes.io/instance: cassandra
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  clusterIP: None
  ports:
    - name: storage
      port: 7000
    - name: cql
      port: 9042
    - name: metrics
      port: 9180
  selector:
    <<: *labels

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cassandra
  namespace: default
  labels: &labels
    app.kubernetes.io/name: cassandra
    app.kubernetes.io/instance: cassandra
  annotations:
    fluxcd.io/tag.cassandra: semver:~3.11
    fluxcd.io/automated: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      <<: *labels
  serviceName: cassandra
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    <<: *labels
              weight: 1
      serviceAccountName: cassandra
      securityContext:
        fsGroup: 999
        runAsGroup: 999
        runAsUser: 999
      containers:
        - name: cassandra
          image: cassandra:3.11.4
          command:
            - cassandra
            - -f
          ports:
            - containerPort: 7000
              name: storage
            - containerPort: 9042
              name: cql
            - containerPort: 9180
              name: metrics
          resources:
            limits: &resources
              cpu: 1
              memory: 2304Mi
            requests:
              <<: *resources
          livenessProbe: &probe
            tcpSocket:
              port: 9042
            failureThreshold: 3
            initialDelaySeconds: 400
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            <<: *probe
            initialDelaySeconds: 15
          volumeMounts:
            - name: config
              mountPath: /etc/cassandra/cassandra.yaml
              subPath: cassandra.yaml
            - name: data
              mountPath: /var/lib/cassandra
      volumes:
        - name: config
          configMap:
            name: cassandra
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          <<: *labels
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
